--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Code Snippets for All",
   "dependencies": {},
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "connect-history-api-fallback": "^1.3.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
@@ -12,6 +13,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
+    "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1"
   }
 }
