--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Code Snippets for All",
   "dependencies": {},
   "devDependencies": {
+    "angular-local-storage": "^0.6.0",
     "bootstrap": "^3.3.7",
     "connect-history-api-fallback": "^1.3.0",
     "gulp": "^3.9.1",
