--- a/package.json
+++ b/package.json
@@ -7,14 +7,6 @@
     "angular-local-storage": "^0.6.0",
     "bootstrap": "^3.3.7",
     "connect-history-api-fallback": "^1.3.0",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-jshint": "^2.0.4",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^2.1.2",
-    "gulp-useref": "^3.1.2",
-    "jshint": "^2.9.4",
-    "jshint-stylish": "^2.2.1"
+    "express": "^4.15.3"
   }
 }
