--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "angular-local-storage": "^0.6.0",
     "bootstrap": "^3.3.7",
     "connect-history-api-fallback": "^1.3.0",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "gulp": "^3.9.1",
+    "gulp-zip": "^4.0.0"
   }
 }
