--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Code Snippets for All",
   "dependencies": {},
   "repository": {
-    "type": "git",
+    "type": "bitbucket",
     "url": "https://bnarasimha21@bitbucket.org/codesnippers/codesnip.git"
   },
   "license": "MIT",
