--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "express": "^4.15.3",
     "gulp": "^3.9.1",
+    "gulp-ng-config": "^1.4.0",
     "gulp-zip": "^4.0.0"
   }
 }
