--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "codesnip",
   "version": "0.0.1",
   "description": "Code Snippets for All",
-  "dependencies": {},
   "repository": {
     "type": "bitbucket",
     "url": "https://bnarasimha21@bitbucket.org/codesnippers/codesnip.git"
@@ -11,13 +10,19 @@
   "scripts": {
     "start": "node server.js"
   },
+  "dependencies": {
+    "angular-local-storage": "^0.6.0",
+    "bootstrap": "^3.3.7",
+    "connect-history-api-fallback": "^1.5.0",
+    "express": "^4.15.3"
+  },
   "devDependencies": {
     "angular-local-storage": "^0.6.0",
     "bootstrap": "^3.3.7",
-    "connect-history-api-fallback": "^1.3.0",
+    "connect-history-api-fallback": "^1.5.0",
     "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-ng-config": "^1.5.0",
-    "gulp-zip": "^4.0.0"
+    "gulp-zip": "^4.2.0"
   }
 }
