--- a/service.yaml
+++ b/service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
     name: codesnippets-service
 spec:
+    type: LoadBalancer
     selector:
         app: codesnippets    
     ports:
-    - protocol: TCP
-        port: 3000
-        targetPort: 3000
-    type: ClusterIP
+        - protocol: TCP
+          port: 3000
+          targetPort: 3000
